codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__canceled_history_search_restores_visible_stars_only_before_the_original_deadline.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
assertion_line: 696
expression: "snapshots.join(\"\\n\\n\")"
---
expires while open: false
initial:
│                           ⠈     ⢀     ⠁                 ⠂
›⠁Ask Elpis to do anything         ⠈      ⠁
│      ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                       100% context left · Tab Context Ledger
searching:
│
› stored draft
│
  reverse-i-search: stored  enter accept · esc cancel
after escape:
│                                       ⠁               ⡀   ⠄           ⠄   ⠄
› Ask Elpis to do anything                                   ⠈
│     ⠠                             ⠠        ⢀ ⢀     ⡀                         ⠄
  ? for shortcuts                       100% context left · Tab Context Ledger

expires while open: true
initial:
│                           ⠈     ⢀     ⠁                 ⠂
›⠁Ask Elpis to do anything         ⠈      ⠁
│      ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                       100% context left · Tab Context Ledger
searching:
│
› stored draft
│
  reverse-i-search: stored  enter accept · esc cancel
after escape:
│
› Ask Elpis to do anything
│
  ? for shortcuts                       100% context left · Tab Context Ledger
