codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__disconnected_sparkle_edits_are_tracked_between_renders.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
gpt-6-astra
before disconnect:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Elpis to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
after typing and erasing without rendering:

› Ask Elpis to do anything

  ? for shortcuts                                            100% context left

gpt-5.5
before disconnect:

› Ask Elpis to do anything

  ? for shortcuts                                            100% context left
after typing and erasing without rendering:

› Ask Elpis to do anything

  ? for shortcuts                                            100% context left
