codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__shortcut_help_hides_visible_sparkles_without_restarting_their_deadline.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
assertion_line: 454
expression: "snapshots.join(\"\\n\\n\")"
---
expires during help: false
initial:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Elpis to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
shortcut help:
  Keyboard shortcuts

  Compose                       Session
  /        Commands             tab   Send message
  @        Mention files        ⇧tab  Permissions
  !        Shell command        ⌥,    Less reasoning
  ⌃j       New line             ⌥.    More reasoning
  ⌃v       Paste image          f4    Inspect activity
  ⌃g       External editor      ⌃c    Quit
  ⌃r       Search history
  esc esc  Edit last message    Transcript (open first)
                                ⌃t            Open transcript
                                f3            Find text
                                pgup / pgdn   Scroll
                                ⌃space        Start selection
                                ⌃home / ⌃end  Top / latest
                                ⇧⌥, / ⇧⌥.     Top / latest

  /keymap customize

› Ask Elpis to do anything

  ? / esc close
after closing:
                                        ⠁               ⡀   ⠄           ⠄   ⠄
› Ask Elpis to do anything                                   ⠈
      ⠠                             ⠠        ⢀ ⢀     ⡀                         ⠄
  ? for shortcuts                                            100% context left

expires during help: true
initial:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Elpis to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
shortcut help:
  Keyboard shortcuts

  Compose                       Session
  /        Commands             tab   Send message
  @        Mention files        ⇧tab  Permissions
  !        Shell command        ⌥,    Less reasoning
  ⌃j       New line             ⌥.    More reasoning
  ⌃v       Paste image          f4    Inspect activity
  ⌃g       External editor      ⌃c    Quit
  ⌃r       Search history
  esc esc  Edit last message    Transcript (open first)
                                ⌃t            Open transcript
                                f3            Find text
                                pgup / pgdn   Scroll
                                ⌃space        Start selection
                                ⌃home / ⌃end  Top / latest
                                ⇧⌥, / ⇧⌥.     Top / latest

  /keymap customize

› Ask Elpis to do anything

  ? / esc close
after closing:

› Ask Elpis to do anything

  ? for shortcuts                                            100% context left
